--- a/index.html
+++ b/index.html
@@ -73,4 +73,19 @@
                                 <option value="llama-4-scout">Llama 4 Scout (Vision)</option>
                             </select>
                             <textarea id="userInput" placeholder="Ask a question or upload an image..." rows="1"></textarea>
-                            <input type="file" id="image-upload" accept="image/*" style="display
+                            <input type="file" id="image-upload" accept="image/*" style="display: none;">
+                            <label for="image-upload" class="icon-btn" title="Upload Image">📎</label>
+                            <button id="sendBtn" class="icon-btn" title="Send">➤</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- CRITICAL SCRIPT TAGS - THESE WERE MISSING -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <script src="script.js"></script>
+
+</body>
+</html>
