--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <div class="model-selector">
                         <span>Model:</span>
                         <select id="model-select">
-                            <option value="pHi-2-2b">pHi-2-2b</option>
-                            <option value="Lfsscp-120b">Lfsscp-120b (Vision)</option>
+                            <option value="pHi-2-2b">GPT-OSS 120B</option>
+                            <option value="Lfsscp-120b">Llama 4 Scout (Vision)</option>
                         </select>
                     </div>
                 </div>
